<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/translate_text_spinners_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/translate_text_spinner_input_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:background="@drawable/outlined_background"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/translate_text_spinner_output_language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/translate_text_spinner_output_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:background="@drawable/outlined_background"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/translate_text_spinner_input_language"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/translate_text_buttons_section"
        app:layout_constraintTop_toBottomOf="@+id/translate_text_spinners_section">

        <EditText
            android:id="@+id/translate_text_input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/outlined_background"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/type_paste_text"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/translate_text_output_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/outlined_background"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/output"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/translate_text_buttons_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/translate_text_translate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:paddingVertical="20dp"
            android:text="@string/translate" />

        <Button
            android:id="@+id/translate_text_save_as_txt_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:paddingVertical="20dp"
            android:text="@string/save_as_txt" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>